--- a/src/style/user.css
+++ b/src/style/user.css
@@ -1,19 +1,19 @@
 #user {
   text-align: center;
-
+  box-shadow: 0 2px 10px rgba(0, 0, 0, .15);
+  background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
   & > a {
     display: inline-block;
   }
 
   & img {
-    @media (max-width: 800px) {
+    @media all and (max-width: 800px) {
       width: 75px;
       height: 75px;
       margin-top: 40px;
     }
-
-    padding: 4px;
-    border: 1px solid #eaeaea;
+    padding: 2px;
+    border: 2px solid #eaeaea;
     display: inline-block;
     width: 100px;
     height: 100px;
@@ -69,14 +69,5 @@
 
   & path {
     fill: #565b65;
-  }
-
-  & .social:after {
-    display: block;
-    margin: 0 auto;
-    width: 50%;
-    content: '';
-    height: 1px;
-    background: #f1f1f1;
   }
 }
