--- a/src/style/posts.css
+++ b/src/style/posts.css
@@ -1,19 +1,22 @@
 #posts {
+  width: 98%;
+  max-width: 720px;
+  margin: 1rem auto;
   text-align: center;
 
   & > .post {
+    display: block;
     text-align: left;
     cursor: pointer;
     position: relative;
     padding: 20px 10px;
-    display: block;
-
+    margin-bottom: 1rem;
+    background-color: #fff;
     &:first-child {
       @media (max-width: 800px) {
         margin-top: 30px;
       }
 
-      margin-top: 50px;
     }
 
     &:hover {
