--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -1,31 +1,39 @@
 html, body {
-  background-color: #fff;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   height: 100%;
+  box-sizing: border-box;
   overflow: hidden;
 }
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  box-sizing: inherit;
+}
+
 body {
+  position: relative;
   font-family: apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, PingFang SC, Microsoft YaHei, sans-serif;
   font-size: 14px;
   line-height: 1;
   color: #333;
-  position: relative;
+  background: #f2f3f8;
   word-wrap: break-word;
 }
-body,
-h1,
-h2,
-h3,
-h4,
-ul,
-li,
-p {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
+
+body .page {
+  color: #333;
+  background: #f2f3f8;
 }
+
+body.dark {
+  color: #fff;
+  background-color: #333;
+}
+
 button {
   appearance: none;
   cursor: pointer;
