--- a/src/style/transition.css
+++ b/src/style/transition.css
@@ -1,6 +1,5 @@
 .page {
   transform: translate3d(0, 0, 0);
-  background: #fff;
   position: fixed;
   width: 100%;
   top: 0;
@@ -8,6 +7,7 @@
   height: 100%;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
 }
 
 .page::-webkit-scrollbar {
