--- a/src/style/posts.css
+++ b/src/style/posts.css
@@ -12,6 +12,10 @@
     padding: 20px 10px;
     margin-bottom: 1rem;
     background-color: #fff;
+    border-radius: 2px;
+    transform: translate(0);
+    transition: transform .1s linear;
+    will-change: transform;
     &:first-child {
       @media (max-width: 800px) {
         margin-top: 30px;
@@ -20,7 +24,7 @@
     }
 
     &:hover {
-      background: #f6f7f7;
+      transform: translateY(-2px);
     }
 
     & div {
