--- a/src/style/button.css
+++ b/src/style/button.css
@@ -1,18 +1,21 @@
 .button {
-  margin: 50px auto 0;
   display: block;
+  margin: 50px auto 0;
+  padding: 4px 0;
   text-align: center;
-  max-width: 170px;
-  border: 2px solid #c3c2c9;
+  width: 200px;
+  border: 1px solid #c3c2c9;
   color: #686868;
-  border-radius: 5px;
+  border-radius: 2px;
   font-size: 14px;
-  height: 32px;
   background: #fff;
   overflow: hidden;
   position: relative;
+  &:hover {
+    color: #333;
+  }
 }
 a.button {
-  line-height: 30px;
-  height: 30px;
+  width: 200px;
+  padding: 7px 0;
 }
