--- a/src/style/transition.css
+++ b/src/style/transition.css
@@ -14,23 +14,44 @@
   width: 0;
 }
 
+.page.home {
+  background-color: #f2f3f8;
+}
+
+.page.single {
+  background-color: #ffff;
+}
+
 .page-current {
   z-index: 1;
 }
+
 .page-movefrom {
-  animation: movefrom .4s ease-in-out both;
+  animation: movefrom .4s linear both;
 }
+
 .page-moveto {
-  animation: moveto .5s ease-in both;
+  animation: moveto .5s linear both;
 }
 
 @keyframes movefrom {
   from {
-    transform: translate3d(-200px, 0, 0);
+    opacity: 0;
+    transform: translate3d(-20px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
+
 @keyframes moveto {
+  from {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
   to {
-    transform: translate3d(-100%, 0, 0);
+    transform: translate3d(20px, 0, 0);
+    opacity: 0;
   }
 }
